--- a/Klinik.Web/Views/MasterData/LookUpCategoryList.cshtml
+++ b/Klinik.Web/Views/MasterData/LookUpCategoryList.cshtml
@@ -1,6 +1,6 @@
-﻿@model Klinik.Entities.MasterData.GudangModel
+﻿@model Klinik.Entities.MasterData.LookUpCategoryModel
 @{
-    ViewBag.Title = "GudangList";
+    ViewBag.Title = "LookupCategoryList";
 }
 
 <section class="panel">
@@ -9,18 +9,18 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.GudangList
+            @Klinik.Resources.UIMessages.LookUpCategoryList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="tbProduct" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbLookUpCategory" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
                         <th>@Klinik.Resources.UIMessages.ID</th>
-                        <th>@Klinik.Resources.UIMessages.Name</th>
-                        <th>@Klinik.Resources.UIMessages.ClinicName</th>
+                        <th>@Klinik.Resources.UIMessages.LookUpName</th>
+                        <th>@Klinik.Resources.UIMessages.LookUpContent</th>
                         <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
                 </thead>
@@ -34,10 +34,10 @@
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/MasterData/CreateOrEditGudang";
+            window.location.href = "/MasterData/CreateOrEditLookUpCategory";
         });
 
-        $('#tbProduct').dataTable({
+        $('#tbLookUpCategory').dataTable({
             "autoWidth": false,
             "processing": true,
             "serverSide": true,
@@ -45,7 +45,7 @@
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/MasterData/GetGudangData",
+                "url": "/MasterData/GetLookUpCategoryData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -70,10 +70,10 @@
 
             "columns": [
                 { "data": "Id", "name": "Id", "autoWidth": false },
-                { "data": "name", "name": "name", "autoWidth": true },
-                { "data": "ClinicName", "ClinicName": "ClinicName", "autoWidth": true },
+                { "data": "LookUpName", "name": "LookUpName", "autoWidth": true },
+                { "data": "LookUpContent", "name": "LookUpContent", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditGudang?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditLookUpCategory?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" }
                 }
 
             ]
@@ -101,7 +101,7 @@
 
         function DeleteGudang(Id) {
         $.ajax({
-            url: '/MasterData/DeleteMasterGudang?id=' + Id,
+            url: '/MasterData/DeleteLookUpCategory?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
