--- a/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditClinic.cshtml
@@ -60,14 +60,14 @@
 					@Html.DropDownListFor(p => p.CityId, (IEnumerable<SelectListItem>)ViewBag.Cities, new { @class = "form-control", @id = "ddlcity" })
 				</div>
 			</div>
-			<div class="form-group">
+			<div @*class="form-group">
 				<label class="col-md-2 control-label" for="inputDefault">
 					@Klinik.Resources.UIMessages.ClinicType
 				</label>
 				<div class="col-md-4">
 					@Html.DropDownListFor(p => p.ClinicType, (IEnumerable<SelectListItem>)ViewBag.ClinicTypes, new { @class = "form-control", @id = "ddlclinicType" })
 				</div>
-			</div>
+			</div>*@
 			<div class="form-group">
 				<label class="col-md-2 control-label" for="inputDefault">
 					@Klinik.Resources.UIMessages.Latitude
