--- a/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
@@ -123,7 +123,7 @@
                             buttondelete = "";
 ;                        }
                         var button = approve;
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">' + type + '</a>  ' + buttondelete + button
+                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">' + type + '</a>  ' + buttondelete;
                     }
                 }
 
