--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Klinik.Entities.PurchaseRequest.PurchaseRequestModel
 @using Klinik.Entities.Account
-
+@using Klinik.Features;
 @{
     ViewBag.Title = "CreateOrEditDeliveryRequest";
     var account = (AccountModel)Session["UserLogon"];
@@ -26,20 +26,20 @@
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NoPr</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "prnumber", @Value = prnumber, @disabled="disabled" })
+                    @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "prnumber", @Value = prnumber, @disabled = "disabled" })
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" id="prdate" name="prdate" placeholder="Purchase Request Date" @(open ? "" : "disabled") value="@valueprdate"/>
+                    <input type="text" class="form-control" id="prdate" name="prdate" placeholder="Purchase Request Date" @(open ? "" : "disabled") value="@valueprdate" />
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.RequestBy</label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" readonly value="@requestby"/>
-                    @Html.HiddenFor(x => x.request_by, new { @class = "form-control", @id = "request_by", @Value=""+requestby+""})
+                    <input type="text" class="form-control" readonly value="@requestby" />
+                    @Html.HiddenFor(x => x.request_by, new { @class = "form-control", @id = "request_by", @Value = "" + requestby + "" })
                 </div>
             </div>
             <br />
@@ -87,11 +87,13 @@
                                 @if (Model.Validasi == null)
                                 {
                                     <td>
-
-                                        <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
-                                        <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
-                                        <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
-                                        <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                                        @if ((GeneralHandler.authorized("EDIT_M_PURCHASEREQUEST") == "true"))
+                                        {
+                                            <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
+                                            <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" disabled>Edit</button>
+                                            <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
+                                            <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                                        }
                                     </td>
                                 }
                             </tr>
@@ -100,6 +102,8 @@
                 </tbody>
                 @if (open)
                 {
+                    if((GeneralHandler.authorized("ADD_M_PURCHASEREQUEST", "EDIT_M_PURCHASEREQUEST") == "true"))
+                    { 
                     <tfoot>
                         <tr>
                             <th hidden>Id Obat</th>
@@ -134,14 +138,39 @@
                             <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
                         </tr>
                     </tfoot>
+                    }
                 }
             </table>
         </div>
         <br />
         <footer class="panel-footer">
-            @if (open)
+            @*@if (open)
             {
                 <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseRequest/CreateOrEditPurchaseRequest" data-redirect="/PurchaseRequest/PurchaseRequestList">@Klinik.Resources.UIMessages.Save</button>
+            }*@
+            @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUEST", "EDIT_M_PURCHASEREQUEST") == "true"))
+            {
+                <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseRequest/CreateOrEditPurchaseRequest" style="display:@(Model != null ? "none" : "inline-block")">@Klinik.Resources.UIMessages.Save</button>
+                <button class="btn btn-primary openallbutton" style="display:@(Model != null ? Model.Validasi == null ? "inline-block" : "none":"none")">@Klinik.Resources.UIMessages.Edit</button>
+            }
+            @if (Model != null && (GeneralHandler.authorized("APPROVE_M_PURCHASEREQUEST") == "true"))
+            {
+                if (Model.approve == null)
+                {
+                    <button class="btn btn-success" onclick="Approve(@Model.Id)">@Klinik.Resources.UIMessages.Approve</button>
+                }
+
+            }
+            @if (Model != null && (GeneralHandler.authorized("VALIDATION_M_PURCHASEREQUEST") == "true"))
+            {
+                if (Model.approve != null && Model.Validasi == null)
+                {
+                    <button class="btn btn-success" onclick="Validation(@Model.Id)">@Klinik.Resources.UIMessages.Validation</button>
+                }
+            }
+            @if (Model != null)
+            {
+                <a class="btn btn-success" href="/GudangPusat/PrintPurchaseRequestPusat?id=@Model.Id" @(Model.approve != null ? "" : "disabled")>Print</a>
             }
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
         </footer>
@@ -183,6 +212,58 @@
                 }
             }
         });
+
+        var Approve = function (ID) {
+            var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
+            if (r == true) {
+            ApprovePR(ID);
+        }
+        return false;
+        }
+
+        function ApprovePR(Id) {
+        $.ajax({
+            url: '/PurchaseRequest/ApprovePurchaseRequest?id=' + Id,
+            type: 'POST',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
+        }
+
+        var Validation = function (ID) {
+            var r = confirm("@Klinik.Resources.UIMessages.ValidationConfirmation" + ID + " ) ?");
+            if (r == true) {
+           ValisasiPR(ID);
+        }
+        return false;
+        }
+
+        function ValisasiPR(Id) {
+        $.ajax({
+            url: '/PurchaseRequest/ValidationPurchaseRequest?id=' + Id,
+            type: 'POST',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
+        }
 
     </script>
     <script type="text/javascript">
