--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -171,7 +171,7 @@
                         if (!@GeneralHandler.authorized("APPROVE_M_PURCHASEREQUEST","VALIDATION_M_PURCHASEREQUEST")) {
                             button = "";
                         }
-                        return full['Validasi'] != null ? '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">View</a>' : '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        return full['Validasi'] != null ? '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">View</a>' : '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>";
                     }
                 }
 
