Revisi purchaser order dll

--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
+            <label class="col-md-2 control-label" for="inputDefault">Tanggal PR</label>
             <div class="col-md-3">
                 @Html.TextBoxFor(x => x.prdate, new { @class = "form-control", @id = "prdate", @Value = DateTime.Now.ToString("MM/dd/yyyy") })
             </div>
@@ -131,7 +131,7 @@
                             <th>Total Request</th>
                             <th>Total Distribusi</th>
                             <th>Sisa Warehouse</th>
-                            <th>Qty (By Formula</th>
+                            <th>Qty (By Formula)</th>
                             <th>Adjusment</th>
                             <th>Remarks</th>
                             <th>Qty final</th>
