--- a/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Klinik.Entities.PurchaseRequestPusat.PurchaseRequestPusatModel
+@using Klinik.Features;
 
 @{
     ViewBag.Title = "PurchaseRequestListPusat";
@@ -11,12 +12,15 @@
         </div>
         <h5 class="panel-title">
             @Klinik.Resources.UIMessages.PurchaseRequestPusatList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUESTPUSAT") == "false"))
+            {
+                <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            }
         </h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="lisdatatable" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="lisdatatable" class="table table-striped table-bordered dt-responsive" style="width:150%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>@Klinik.Resources.UIMessages.IDPR</th>
@@ -29,6 +33,7 @@
                         <th>@Klinik.Resources.UIMessages.RequestBy</th>
                         <th>@Klinik.Resources.UIMessages.ApprovedBY</th>
                         <th>@Klinik.Resources.UIMessages.Approve</th>
+                        <th>Status</th>
                         <th>@Klinik.Resources.UIMessages.CreatedBy</th>
                         <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
@@ -113,6 +118,12 @@
                     "targets": [10],
                     "searchable": true,
                     "orderable": false
+                    }
+                ,
+                {
+                    "targets": [11],
+                    "searchable": true,
+                    "orderable": false
                 }
                 ],
 
@@ -133,7 +144,7 @@
                 },
                 { "data": "createpo", "createpo": "createpo", "autoWidth": true },
                 {
-                    "data": "donumber", 
+                    "data": "donumber",
                     "render": function (data, type, full, meta) {
                         return '<a href="/GudangPusat/CreateOrEditDeliveryOrder?id=' + full.doid + '">' + full.donumber + '</a>';
                     }
@@ -142,6 +153,7 @@
                 { "data": "request_by", "request_by": "request_by", "autoWidth": false },
                 { "data": "approve_by", "approve_by": "approve_by", "autoWidth": true },
                 { "data": "approve", "approve": "approve", "autoWidth": true },
+                { "data": "status", "status": "status", "autoWidth": true },
                 { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
                 {
                     "render": function (data, type, full, meta)
