--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -30,9 +30,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
+                <label class="col-md-2 control-label" for="inputDefault">Tanggal PR</label>
                 <div class="col-md-4">
-                    <input type="text" class="form-control" id="prdate" name="prdate" placeholder="Purchase Request Date" @(open ? "" : "disabled") value="@valueprdate" />
+                    <input type="text" class="form-control" id="prdate" name="prdate" placeholder="Purchase Request Date" @(open ? "" : "disabled") value="@valueprdate" autocomplete="off"/>
                 </div>
             </div>
             <div class="form-group">
@@ -47,7 +47,7 @@
     </div>
     <div class="panel-body">
         <div class="scrollTable">
-            <table id="tblPurchaseRequest" class="table color-table success-table">
+            <table id="tblPurchaseRequest" class="table color-table success-table" style="width:150%">
                 <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseRequestList</caption>
                 <thead>
                     <tr>
@@ -106,9 +106,11 @@
                     { 
                     <tfoot>
                         <tr>
+                            <th class="caption-table headertable" colspan="17" style="text-align:center">Add Row Detail</th>
+                        </tr>
+                        <tr>
                             <th hidden>Id Obat</th>
                             <th>Nama Obat</th>
-                            <th>New Product</th>
                             <th>Total Pemakaian</th>
                             <th>Sisa Stock</th>
                             <th>Qty Request</th>
@@ -124,8 +126,7 @@
                         <tr id="purchaseorderdetail">
                             <td hidden><input type="text" hidden id="PurchaseRequestDetailId" /></td>
                             <td hidden><input type="text" hidden id="ProductId" /></td>
-                            <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product" /><button style="display:none" class="btn btn-xs btn-success addnewproduct">add</button> </td>
-                            <td><input type="checkbox" id="newproduct" /></td>
+                            <td><select id="namabarang" class="form-control" style="display:block;width:160px"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product" /><button style="display:none" class="btn btn-xs btn-success addnewproduct">add</button><br /><p>New Product</p><input type="checkbox" id="newproduct" /></td>
                             <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="0" readonly /></td>
                             <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="0" readonly /></td>
                             <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="0" readonly /></td>
@@ -182,7 +183,8 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#prdate').datepicker({
-                autoclose: true
+                autoclose: true,
+                startDate: new Date()
             });
             $('#btnreset').click(function (e) {
                 window.location.href = "/PurchaseRequest/PurchaseRequestList";
