--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -16,7 +16,10 @@
         </div>
         <h5 class="panel-title">
             @Klinik.Resources.UIMessages.PurchaseRequestList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUEST") == "true"))
+            {
+                <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
+            }
         </h5>
     </header>
     <div class="panel-body scrollTable">
