--- a/Klinik.Web/Views/MasterData/CreateOrEditProduct.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditProduct.cshtml
@@ -27,6 +27,12 @@
 					@Html.TextBoxFor(x => x.Name, new { @class = "form-control", @id = "tbName" })
 				</div>
 			</div>
+            <div class="form-group">
+				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Vendor</label>
+				<div class="col-md-4">
+					@Html.TextBoxFor(x => x.Vendor, new { @class = "form-control", @id = "tbVendor" })
+				</div>
+			</div>
 			<div class="form-group">
 				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ProductCategory</label>
 				<div class="col-md-4">
