--- a/Klinik.Web/Views/GudangPusat/CreateOrEditDeliveryOrder.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditDeliveryOrder.cshtml
@@ -94,7 +94,7 @@
                         <th>Total Request</th>
                         <th>Total Distribusi</th>
                         <th>Sisa Warehouse</th>
-                        <th>Qty</th>
+                        <th>Qty (by formula)</th>
                         <th>Adjusment</th>
                         <th>Remarks</th>
                         <th>Qty final</th>
