--- a/Klinik.Web/Views/GudangPusat/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/PurchaseOrderList.cshtml
@@ -9,7 +9,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseOrderPusatList
+            HO Order
         </h5>
     </header>
     <div class="panel-body">
