--- a/Klinik.Web/Views/GudangPusat/DeliveryOrderList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/DeliveryOrderList.cshtml
@@ -10,7 +10,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseOrderPusatList
+            HO Delivery Order
         </h5>
     </header>
     <div class="panel-body">
