--- a/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
@@ -11,8 +11,8 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseRequestPusatList
-            @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUESTPUSAT") == "false"))
+            HO Request
+            @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUESTPUSAT") == "true"))
             {
                 <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
             }
