--- a/Klinik.Web/Views/MCU/ViewMcuSchedulle.cshtml
+++ b/Klinik.Web/Views/MCU/ViewMcuSchedulle.cshtml
@@ -121,7 +121,7 @@
                     {
                         "render": function (data, type, full, meta) {
 
-                            return '<a class="btn btn-success" href="/MedicalHistory/ViewEmployeeFamilyData?nik=' + full.Id + '">View Detail</a>';
+                            return '<a class="btn btn-success" href="/MedicalHistory/ViewEmployeeFamilyData?nik=' + full.Id + '">Proses</a>';
 
                         }
                     }
