Bug Fix Appointment

--- a/Klinik.Web/Views/Appointment/ListAppointment.cshtml
+++ b/Klinik.Web/Views/Appointment/ListAppointment.cshtml
@@ -71,7 +71,7 @@
                         "targets": [1],
                         "searchable": true,
                         "orderable": true,
-                        "data": "EmpName"
+                        "data": "Patient"
                     },
                     {
                         "targets": [2],
