--- a/Klinik.Web/Views/Partials/_DetailAppointment.cshtml
+++ b/Klinik.Web/Views/Partials/_DetailAppointment.cshtml
@@ -28,9 +28,9 @@
 </head>
 <body>
     <div class="form-group">
-        <label class="control-label col-md-2">@Klinik.Resources.UIMessages.Employee</label>
+        <label class="control-label col-md-2">@Klinik.Resources.UIMessages.Patient</label>
         <div class="col-md-5">
-            @Html.HiddenFor(x => x.EmployeeID, new { @id = "employeeId" })
+            @Html.HiddenFor(x => x.PatientID, new { @id = "employeeId" })
             <input type="text" class="form-control" id="employee" />
         </div>
     </div>
