--- a/Klinik.Web/Views/Appointment/MakeAppointment.cshtml
+++ b/Klinik.Web/Views/Appointment/MakeAppointment.cshtml
@@ -143,7 +143,7 @@
             });
 
             $('#btnSaveAppointment').click(function (e) {
-                var _emplId = $('#employeeId').val();
+                var _patientId = $('#employeeId').val();
                 var _clinicId = $('#clinicId').val();
                 var _poliId = $('#poliId').val();
                 var _doctorId = $('#doctorId').val();
@@ -153,7 +153,7 @@
                 var _timeAppointment = $('#valJam').val();
 
                 var _appointmentData = {
-                    employeeID:_emplId,
+                    patientID:_patientId,
                     clinicId:_clinicId,
                     poliId:_poliId,
                     doctorId:_doctorId,
